# exchange_script_and_bot

./: CLI_exchange.py  pyproject.toml
web_chat/: Web_socket_bot.py  main.js
